manifests/argocd/local/ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-tls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.127.0.0.1.sslip.io`)
      priority: 10
      services:
        - name: argocd-server-server
          port: 80
    - kind: Rule
      match: Host(`argocd.127.0.0.1.sslip.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-crt
#    options: {}
